// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser exponential expressions parses exponential operators 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Binary {
      "left": Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "inArray": false,
          "kind": 4,
          "value": 2,
        },
      },
      "right": Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "inArray": false,
          "kind": 4,
          "value": 3,
        },
      },
      "token": {
        "isReserved": false,
        "kind": "Caret",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "^",
      },
    },
  },
]
`;

exports[`parser exponential expressions parses repeated exponential operators as left-associative 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Binary {
      "left": Binary {
        "left": Literal {
          "_location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "value": Int32 {
            "inArray": false,
            "kind": 4,
            "value": 2,
          },
        },
        "right": Literal {
          "_location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "value": Int32 {
            "inArray": false,
            "kind": 4,
            "value": 3,
          },
        },
        "token": {
          "isReserved": false,
          "kind": "Caret",
          "literal": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "text": "^",
        },
      },
      "right": Literal {
        "_location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "value": Int32 {
          "inArray": false,
          "kind": 4,
          "value": 4,
        },
      },
      "token": {
        "isReserved": false,
        "kind": "Caret",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "^",
      },
    },
  },
]
`;
